...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final plantasState = ref.watch(plantasProvider);

    return Scaffold(
      appBar: AppBar(
        title: const Text('Plantas'),
      ),
      body: _buildBody(context, ref, plantasState),
      floatingActionButton: FloatingActionButton(
        onPressed: () => context.push('/plantas/nova'),
        child: const Icon(Icons.add),
      ),
...
