...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final variedadeState = ref.watch(variedadeProvider);

    return Scaffold(
      appBar: AppBar(
        title: const Text('Variedades'),
      ),
      body: _buildBody(context, ref, variedadeState),
      floatingActionButton: FloatingActionButton(
        onPressed: () => context.push('/variedades/nova'),
        child: const Icon(Icons.add),
      ),
...
