...
        ref.read(variedadeProvider.notifier).clearError();
      }
    });

    return Scaffold(
      appBar: AppBar(
        title: const Text('Detalhes da Variedade'),
        actions: [
          IconButton(
            icon: const Icon(Icons.edit),
            onPressed: () => context.push('/variedades/${widget.id}/editar'),
          ),
          IconButton(
...
